feat: added diploma project info

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                 <h2 class="personal-position">Software Engineer</h2>
             </div>
             <div class="cv-header-right-part">
-            <nav class="list">
-                <ul class="main">
-                  <li class="item"><a href="#about">About me</a></li>
-                  <li class="item"><a href="#education">Education</a></li>
-                  <li class="item"><a href="#experience">Experience</a></li>
-                  <li class="item"><a href="#skills">Skills</a></li>
-                </ul>
-            </nav>
+                <nav class="list">
+                    <ul class="main">
+                    <li class="item"><a href="#about">About me</a></li>
+                    <li class="item"><a href="#education">Education</a></li>
+                    <li class="item"><a href="#experience">Experience</a></li>
+                    <li class="item"><a href="#skills">Skills</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
         <div class="content">
@@ -123,6 +123,10 @@
                     }
                                     </code>
                                 </pre>
+                            </div>
+                            <div class="code-sample">
+                                Diploma project:
+                                <a href="https://github.com/immraytal/Porechanka">Advert service "Porechanka"</a>
                             </div>
                         </div>
                     </div>
